<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.entur.ror</groupId>
        <artifactId>superpom</artifactId>
        <version>5.3.0</version>
    </parent>
    <groupId>org.rutebanken.sobek</groupId>
    <artifactId>sobek-parent</artifactId>
    <version>1.0.1-SNAPSHOT</version>
    <packaging>pom</packaging>

    <name>Sobek</name>
    <description>Vehicle register / materiellregister</description>


    <modules>
        <module>sobek-model</module>
        <module>sobek-common</module>
        <module>sobek-repository</module>
        <module>sobek-service</module>
        <module>sobek-app</module>
    </modules>

    <licenses>
        <license>
            <name>EUPL-1.2 with modifications</name>
            <url>https://joinup.ec.europa.eu/software/page/eupl</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <organization>
        <name>Entur AS</name>
        <url>http://www.entur.org/</url>
    </organization>

    <scm>
        <connection>scm:git:ssh://git@github.com:entur/sobek.git</connection>
        <developerConnection>scm:git:ssh://git@github.com:entur/sobek.git</developerConnection>
    </scm>

    <properties>
        <java.version>21</java.version>
        <spring-cloud-gcp.version>7.4.1</spring-cloud-gcp.version>
        <geotools.version>30.2</geotools.version>
        <graphql-java.version>20.9</graphql-java.version>
        <graphql-java-extended-scalars.version>24.0</graphql-java-extended-scalars.version>
        <swagger-jersey2.version>2.2.43</swagger-jersey2.version>
        <netex-java-model.version>3.0.0-SNAPSHOT</netex-java-model.version>
        <entur.helpers.version>5.50.0</entur.helpers.version>
        <jts-core.version>1.20.0</jts-core.version>
        <groovy-all.version>4.0.28</groovy-all.version>
        <rest-assured.version>5.5.6</rest-assured.version>
        <!-- Dependency versions -->
        <jakarta.version>3.2.0</jakarta.version>
        <jakarta-validation.version>3.1.1</jakarta-validation.version>
        <postgis.version>2.5.1</postgis.version>
        <slf4j.version>2.0.17</slf4j.version>
        <commons-lang3.version>3.20.0</commons-lang3.version>
        <guava.version>32.1.3-jre</guava.version>
        <hibernate.version>7.1.11.Final</hibernate.version>
        <lombok.version>1.18.42</lombok.version>
        <mapstruct.version>1.6.3</mapstruct.version>
        <lombok-mapstruct-binding.version>0.2.0</lombok-mapstruct-binding.version>
        <graphql-java.version>20.9</graphql-java.version>
        <graphql-java-extended-scalars.version>20.2</graphql-java-extended-scalars.version>
        <spring-cloud-aws-secrets-manager.version>3.1.1</spring-cloud-aws-secrets-manager.version>
        <aws-secretsmanager.version>2.0.4</aws-secretsmanager.version>
        <h2database.version>2.4.240</h2database.version>
    </properties>

    <repositories>
        <repository>
            <id>central2</id>
            <name>Check central first to avoid a lot of not found warnings</name>
            <url>https://repo.maven.apache.org/maven2</url>
        </repository>
        <repository>
            <id>osgeo</id>
            <name>Open Source Geospatial Foundation Repository</name>
            <url>https://repo.osgeo.org/repository/release/</url>
        </repository>
        <repository>
            <id>maven-snapshots</id>
            <url>https://central.sonatype.com/repository/maven-snapshots</url>
            <releases>
                <enabled>false</enabled>
            </releases>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </repository>
    </repositories>

    <dependencyManagement>
        <dependencies>
            <!-- Internal modules -->
            <dependency>
                <groupId>org.rutebanken.sobek</groupId>
                <artifactId>sobek-model</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>org.rutebanken.sobek</groupId>
                <artifactId>sobek-common</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>org.rutebanken.sobek</groupId>
                <artifactId>sobek-repository</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>org.rutebanken.sobek</groupId>
                <artifactId>sobek-service</artifactId>
                <version>${project.version}</version>
            </dependency>

            <!-- Jakarta EE -->
            <dependency>
                <groupId>jakarta.persistence</groupId>
                <artifactId>jakarta.persistence-api</artifactId>
                <version>${jakarta.version}</version>
            </dependency>
            <dependency>
                <groupId>jakarta.validation</groupId>
                <artifactId>jakarta.validation-api</artifactId>
                <version>${jakarta-validation.version}</version>
            </dependency>

            <!-- Hibernate -->
            <dependency>
                <groupId>org.hibernate.orm</groupId>
                <artifactId>hibernate-core</artifactId>
                <version>${hibernate.version}</version>
            </dependency>
            <dependency>
                <groupId>org.hibernate.orm</groupId>
                <artifactId>hibernate-spatial</artifactId>
                <version>${hibernate.version}</version>
            </dependency>

            <!-- Lombok -->
            <dependency>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok</artifactId>
                <version>${lombok.version}</version>
            </dependency>

            <!-- PostGIS - database driver -->
            <dependency>
                <groupId>net.postgis</groupId>
                <artifactId>postgis-jdbc</artifactId>
                <version>${postgis.version}</version>
            </dependency>

            <!-- NeTEx Java Model -->
            <dependency>
                <groupId>org.entur</groupId>
                <artifactId>netex-java-model</artifactId>
                <version>${netex-java-model.version}</version>
            </dependency>

            <!-- Apache Commons -->
            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-lang3</artifactId>
                <version>${commons-lang3.version}</version>
            </dependency>

            <!-- Guava -->
            <dependency>
                <groupId>com.google.guava</groupId>
                <artifactId>guava</artifactId>
                <version>${guava.version}</version>
            </dependency>

            <!-- SLF4J -->
            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j-api</artifactId>
                <version>${slf4j.version}</version>
            </dependency>
            <dependency>
                <groupId>org.mapstruct</groupId>
                <artifactId>mapstruct</artifactId>
                <version>${mapstruct.version}</version>
            </dependency>
            <dependency>
                <groupId>com.h2database</groupId>
                <artifactId>h2</artifactId>
                <version>${h2database.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.15.0</version>
                    <configuration>
                        <source>${java.version}</source>
                        <target>${java.version}</target>
                        <annotationProcessorPaths>
                            <!-- IMPORTANT: Lombok must come BEFORE MapStruct -->
                            <path>
                                <groupId>org.projectlombok</groupId>
                                <artifactId>lombok</artifactId>
                                <version>${lombok.version}</version>
                            </path>
                            <!-- MapStruct processor -->
                            <path>
                                <groupId>org.mapstruct</groupId>
                                <artifactId>mapstruct-processor</artifactId>
                                <version>${mapstruct.version}</version>
                            </path>
                            <!-- Binding for Lombok + MapStruct -->
                            <path>
                                <groupId>org.projectlombok</groupId>
                                <artifactId>lombok-mapstruct-binding</artifactId>
                                <version>${lombok-mapstruct-binding.version}</version>
                            </path>
                        </annotationProcessorPaths>
                        <compilerArgs>
                            <arg>-Amapstruct.defaultComponentModel=spring</arg>
                            <arg>-Amapstruct.unmappedTargetPolicy=WARN</arg>
                        </compilerArgs>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
</project>